[package]
name = "fsuipc"
description = "FSUIPC client for Rust programming language"
version = "0.4.0"
authors = ["Alvaro Polo <apoloval@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/apoloval/fsuipc-rs"
readme = "README.md"
keywords = ["fsuipc", "fsx", "p3d", "simulation"]

[dependencies]
byteorder = "0.5"
kernel32-sys = "0.2"
user32-sys = "0.1"
winapi = "0.2"
